<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sec"
    tools:context=".MainActivity2">

    <Space
        android:id="@+id/spc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/con_title"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/spc"
        app:layout_constraintBottom_toTopOf="@+id/con_top">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_back"
            android:scaleType="centerCrop"
            android:layout_marginStart="15dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_title"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintHorizontal_weight="9"
            android:textColor="@color/silver_darker2"
            app:layout_constraintStart_toEndOf="@+id/back_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/con_bottom"
        app:layout_constraintTop_toBottomOf="@+id/con_title"
        app:layout_constraintVertical_weight="4.2"
        tools:layout_editor_absoluteX="0dp">

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/spinner_first_converter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/converter"
            android:padding="10dp"
            android:textColor="@color/lighter_silver"
            android:textColorHint="@color/lighter_silver"
            android:textSize="20sp"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@color/silver_darker2"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_item_array="@array/first"
            app:spinner_item_height="46dp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/silver_darker"
            app:spinner_popup_elevation="14dp"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintHorizontal_weight="6"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="phone"
            tools:ignore="LabelFor"
            android:textSize="27sp"
            android:maxLength="4"
            android:textColor="@color/lighter_silver"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintTop_toBottomOf="@+id/spinner_first_converter"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_top"
        app:layout_constraintVertical_weight="4.3"
        tools:layout_editor_absoluteX="0dp">

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/spinner_second_converter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/converter"
            android:padding="10dp"
            android:textColor="@color/lighter_silver"
            android:textColorHint="@color/lighter_silver"
            android:textSize="20sp"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_padding="8dp"
            app:spinner_divider_color="@color/silver_darker2"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_item_array="@array/first"
            app:spinner_item_height="46dp"
            app:spinner_popup_animation="dropdown"
            app:spinner_popup_background="@color/silver_darker"
            app:spinner_popup_elevation="14dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nothing_now"
            android:textColor="@color/lighter_silver"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_second_converter"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bin_convert"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/convert"
            android:textSize="25sp"
            android:textColor="@color/lighter_silver"
            android:background="@color/silver"
            app:elevation="10dp"
            android:foregroundTintMode="src_over"
            android:foregroundGravity="center"
            android:foregroundTint="@color/silver_darker"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>